YTG-#8 [메인][레이아웃] 유머 등급업 관련 Ui 수정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="colorWhite">#FFFFFF</color>
 
     <color name="colorPurple">#B029DF</color>
+    <color name="colorLightPurple">#E69FFF</color>
     <color name="colorGreen">#1EC57E</color>
     <color name="colorYellow">#FFE111</color>
     <color name="colorRed">#E2594E</color>
