--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="colorMiddleGrey">#333333</color>
     <color name="colorGrey">#404040</color>
     <color name="colorGreyGrey">#5C5C5C</color>
+    <color name="colorGreyGreyGrey">#6C6C6C</color>
     <color name="colorLightGrey">#737373</color>
     <color name="colorWhite">#FFFFFF</color>
 
