--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -55,9 +55,9 @@
                     app:layout_constraintTop_toBottomOf="@id/user_grade" />
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="154dp"
-                    android:src="@drawable/sinip_main"
+                    android:layout_width="91dp"
+                    android:layout_height="138dp"
+                    android:src="@drawable/ic_sinip_main"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -148,7 +148,8 @@
                     android:textColor="@color/colorWhite"
                     android:textSize="15dp"
                     app:layout_constraintBottom_toBottomOf="@id/comment_number"
-                    app:layout_constraintStart_toEndOf="@id/comment_number" />
+                    app:layout_constraintStart_toEndOf="@id/comment_number"
+                    app:layout_constraintTop_toTopOf="@id/comment_number" />
 
                 <ProgressBar
                     style="@style/HumorGradeProgressbar"
@@ -178,7 +179,7 @@
                     android:layout_width="44dp"
                     android:layout_height="6dp"
                     android:layout_marginTop="15dp"
-                    android:background="@color/colorGreyGrey"
+                    android:background="@drawable/bg_humor_card_bar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
