YTG-#8 [메인][레이아웃] 메인 레이아웃에 Floating Action Button 추가 (글쓰기 버튼)

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
     <style name="NoTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorDarkGrey</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPurple</item>
 
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
