YTG-#8 [메인][레이아웃] fragment_main.xml 에 MainViewModel dataBinding variable 추가

--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="vm"
+            type="com.az.main.MainViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
