YTG-#8 [메인][레이아웃] fragment_main.xml textView, progressbar ViewModel 과 binding

--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -43,23 +43,25 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="28dp"
                         android:gravity="center"
-                        android:text="유머쪼랩ㅋ"
+                        android:text="@{vm.userGrade}"
                         android:textColor="@color/colorWhite"
                         android:textSize="45dp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="@id/user_grade_guide"
-                        app:layout_constraintStart_toStartOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        tools:text="유머쪼랩ㅋ" />
 
                     <TextView
                         android:id="@+id/user_grade_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="분발하자^^"
+                        android:text="@{vm.userGradeText}"
                         android:textColor="@color/colorWhite"
                         android:textSize="45dp"
                         app:layout_constraintStart_toStartOf="@id/user_grade"
-                        app:layout_constraintTop_toBottomOf="@id/user_grade" />
+                        app:layout_constraintTop_toBottomOf="@id/user_grade"
+                        tools:text="분발하자^^" />
 
                     <ImageView
                         android:layout_width="91dp"
@@ -100,12 +102,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="4dp"
-                        android:text="14개"
+                        android:text="@{@string/count(vm.postCount)}"
                         android:textColor="@color/colorWhite"
                         android:textSize="20dp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toEndOf="@id/post_number_text"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="14개" />
 
                     <TextView
                         android:id="@+id/comment_number_text"
@@ -127,12 +130,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="4dp"
-                        android:text="4개"
+                        android:text="@{@string/count(vm.commentCount)}"
                         android:textColor="@color/colorWhite"
                         android:textSize="20dp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toEndOf="@id/comment_number_text"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="4개" />
 
                     <View
                         android:layout_width="0.8dp"
@@ -151,7 +155,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
-                        android:text="더 작성하면 등급업!"
+                        android:text="@string/humor_count_text"
                         android:textColor="@color/colorWhite"
                         android:textSize="15dp"
                         app:layout_constraintBottom_toBottomOf="@id/comment_number"
@@ -163,11 +167,12 @@
                         android:layout_width="0dp"
                         android:layout_height="9dp"
                         android:layout_marginTop="11dp"
-                        android:progress="70"
+                        android:progress="@{vm.humorGradeProgress}"
                         android:progressDrawable="@drawable/humor_grade_progressbar"
                         app:layout_constraintEnd_toEndOf="@id/humor_count_text"
                         app:layout_constraintStart_toStartOf="@id/post_number_text"
-                        app:layout_constraintTop_toBottomOf="@id/post_number_text" />
+                        app:layout_constraintTop_toBottomOf="@id/post_number_text"
+                        tools:progress="70" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -197,7 +202,7 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="54dp"
                         android:layout_marginBottom="28dp"
-                        android:text="개그 목록"
+                        android:text="@string/humors_list_title"
                         android:textColor="@color/colorWhite"
                         android:textSize="18dp"
                         android:textStyle="bold"
