YTG-#8 [메인][레이아웃] 리사이클러뷰 setItem() BindingAdapter 추가

--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -223,10 +224,12 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/humor_card_rv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorGrey"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    bind:setItems="@{vm.humors}"
                     tools:listitem="@layout/item_humor_card" />
             </LinearLayout>
         </com.az.main.StickyScrollView>
