--- a/features/main/src/main/res/layout/item_humor_card.xml
+++ b/features/main/src/main/res/layout/item_humor_card.xml
@@ -1,117 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="354dp"
-    android:layout_height="315dp"
-    android:layout_marginHorizontal="30dp"
-    android:layout_marginBottom="27dp"
-    android:background="@drawable/bg_humor_card_item">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/user_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="26dp"
-        android:text="신입 가나다님"
-        android:textColor="@color/colorDarkGrey"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="2020.02.22"
-        android:textColor="@color/colorDarkGrey"
-        android:textSize="11dp"
-        app:layout_constraintBottom_toBottomOf="@id/user_name"
-        app:layout_constraintStart_toEndOf="@id/user_name"
-        app:layout_constraintTop_toTopOf="@id/user_name" />
+        <variable
+            name="humorItem"
+            type="com.az.main.TempHumorData" />
+    </data>
 
-    <View
-        android:id="@+id/humor_card_divider"
-        android:layout_width="0dp"
-        android:layout_height="0.4dp"
-        android:layout_marginHorizontal="25dp"
-        android:layout_marginTop="22dp"
-        android:background="@color/colorGreyGreyGrey"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_name" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="354dp"
+        android:layout_height="315dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginBottom="27dp"
+        android:background="@drawable/bg_humor_card_item">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="66dp"
-        android:layout_marginBottom="55dp"
-        android:gravity="center"
-        android:text="소나무가\n삐지면?"
-        android:textColor="@color/colorMiddleGrey"
-        android:textSize="43dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/comment_count"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/humor_card_divider" />
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="26dp"
+            android:text="@{humorItem.user}"
+            android:textColor="@color/colorDarkGrey"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="신입 가나다님" />
 
-    <ImageView
-        android:id="@+id/heart"
-        android:layout_width="25dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginBottom="26dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_heart"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="@{humorItem.date}"
+            android:textColor="@color/colorDarkGrey"
+            android:textSize="11dp"
+            app:layout_constraintBottom_toBottomOf="@id/user_name"
+            app:layout_constraintStart_toEndOf="@id/user_name"
+            app:layout_constraintTop_toTopOf="@id/user_name"
+            tools:text="2020.02.22" />
 
-    <TextView
-        android:id="@+id/heart_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="48개"
-        android:textColor="@color/colorDarkGrey"
-        android:textSize="11dp"
-        app:layout_constraintStart_toEndOf="@id/heart"
-        app:layout_constraintTop_toTopOf="@id/comment_count" />
+        <View
+            android:id="@+id/humor_card_divider"
+            android:layout_width="0dp"
+            android:layout_height="0.4dp"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="22dp"
+            android:background="@color/colorGreyGreyGrey"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/user_name" />
 
-    <ImageView
-        android:id="@+id/comment"
-        android:layout_width="20dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginBottom="24dp"
-        android:src="@drawable/ic_comment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/heart_count" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="66dp"
+            android:layout_marginBottom="55dp"
+            android:gravity="center"
+            android:text="@{humorItem.content}"
+            android:textColor="@color/colorMiddleGrey"
+            android:textSize="43dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/comment_count"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/humor_card_divider"
+            tools:text="소나무가\n삐지면?" />
 
-    <TextView
-        android:id="@+id/comment_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="48개"
-        android:textColor="@color/colorDarkGrey"
-        android:textSize="11dp"
-        app:layout_constraintBottom_toBottomOf="@id/comment"
-        app:layout_constraintStart_toEndOf="@id/comment"
-        app:layout_constraintTop_toTopOf="@id/comment" />
+        <ImageView
+            android:id="@+id/heart"
+            android:layout_width="25dp"
+            android:layout_height="23dp"
+            android:layout_marginStart="22dp"
+            android:layout_marginBottom="26dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_heart"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageButton
-        android:layout_width="44dp"
-        android:layout_height="44dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="26dp"
-        android:background="@drawable/bg_humor_card_more_button"
-        android:elevation="4dp"
-        android:src="@drawable/ic_humor_more_arrow"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:pressedTranslationZ="8dp" />
+        <TextView
+            android:id="@+id/heart_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:text="@{@string/count(humorItem.heart)}"
+            android:textColor="@color/colorDarkGrey"
+            android:textSize="11dp"
+            app:layout_constraintStart_toEndOf="@id/heart"
+            app:layout_constraintTop_toTopOf="@id/comment_count"
+            tools:text="48개" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/comment"
+            android:layout_width="20dp"
+            android:layout_height="22dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginBottom="24dp"
+            android:src="@drawable/ic_comment"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/heart_count" />
+
+        <TextView
+            android:id="@+id/comment_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@{@string/count(humorItem.comment)}"
+            android:textColor="@color/colorDarkGrey"
+            android:textSize="11dp"
+            app:layout_constraintBottom_toBottomOf="@id/comment"
+            app:layout_constraintStart_toEndOf="@id/comment"
+            app:layout_constraintTop_toTopOf="@id/comment"
+            tools:text="10개" />
+
+        <ImageButton
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_marginEnd="26dp"
+            android:layout_marginBottom="26dp"
+            android:background="@drawable/bg_humor_card_more_button"
+            android:elevation="4dp"
+            android:src="@drawable/ic_humor_more_arrow"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:pressedTranslationZ="8dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
