YTG-#12 [마이페이지][레이아웃] fragment_my_page.xml 유저 등급 스티커, 아이디 ui 추가

--- a/features/mypage/src/main/res/layout/fragment_my_page.xml
+++ b/features/mypage/src/main/res/layout/fragment_my_page.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorDarkGrey">
+
+        <ImageView
+            android:id="@+id/user_grade_sticker"
+            android:layout_width="196dp"
+            android:layout_height="154dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="52dp"
+            android:src="@drawable/ic_sinip_sticker"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="마이페이지" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="28dp"
+            android:text="@string/user_name"
+            android:textColor="@color/colorWhite"
+            android:textSize="40dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/user_grade_sticker" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
