YTG-#9 [로그인][뷰] 로그인 페이지 뷰 개발
- 임시로 dp값 조정
- %로 변경 필요

--- a/features/login/src/main/res/layout/fragment_login.xml
+++ b/features/login/src/main/res/layout/fragment_login.xml
@@ -10,11 +10,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="36dp"
         android:letterSpacing="-0.05"
         android:text="@string/login_sub_guide"
         android:textColor="@color/colorWhite"
-        android:textSize="45sp"
+        android:textSize="32sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,7 +27,7 @@
         android:letterSpacing="-0.05"
         android:text="@string/login_guide"
         android:textColor="@color/colorWhite"
-        android:textSize="45sp"
+        android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_sub_guide" />
@@ -36,7 +36,7 @@
         android:id="@+id/img_heart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="54dp"
         android:src="@drawable/heart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,80 +49,80 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/img_heart" />
 
-    <RelativeLayout
-        android:id="@+id/layout_edit_text_wrap"
+    <EditText
+        android:id="@+id/edt_login_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:layout_marginBottom="47dp"
-        android:orientation="vertical"
-        android:paddingStart="30dp"
-        android:paddingEnd="30dp"
-        app:layout_constraintBottom_toTopOf="@id/layout_button_wrap"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="30dp"
+        android:backgroundTint="@color/colorDarkLightGrey"
+        android:hint="@string/id_placeholder"
+        android:paddingBottom="20dp"
+        android:textColor="@color/colorDarkLightGrey"
+        android:textColorHint="@color/colorDarkLightGrey"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_guide" />
+
+    <EditText
+        android:id="@+id/edt_login_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/edt_login_id"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:backgroundTint="@color/colorDarkLightGrey"
+        android:hint="@string/password_placeholder"
+        android:paddingBottom="20dp"
+        android:textColor="@color/colorDarkLightGrey"
+        android:textColorHint="@color/colorDarkLightGrey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt_guide">
+        app:layout_constraintTop_toBottomOf="@+id/edt_login_id" />
 
-        <EditText
-            android:id="@+id/edt_login_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorDarkLightGrey"
-            android:hint="@string/id_placeholder"
-            android:paddingBottom="20dp"
-            android:textColor="@color/colorDarkLightGrey"
-            android:textColorHint="@color/colorDarkLightGrey" />
-
-        <EditText
-            android:id="@+id/edt_login_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/edt_login_id"
-            android:backgroundTint="@color/colorDarkLightGrey"
-            android:hint="@string/password_placeholder"
-            android:paddingBottom="20dp"
-            android:textColor="@color/colorDarkLightGrey"
-            android:textColorHint="@color/colorDarkLightGrey" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/edt_login_password"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="15dp"
-            android:text="@string/forgot_password"
-            android:textColor="@color/colorDarkLightGrey" />
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/layout_button_wrap"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/txt_forgot_password"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        android:orientation="vertical"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout_edit_text_wrap">
+        android:layout_below="@id/edt_login_password"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="40dp"
+        android:text="@string/forgot_password"
+        android:textColor="@color/colorDarkLightGrey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edt_login_password" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="57dp"
-            android:layout_marginBottom="9dp"
-            android:background="@drawable/rounded_button_color_purple"
-            android:text="@string/login_button"
-            android:textColor="@color/colorWhite" />
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/rounded_button_color_purple"
+        android:text="@string/login_button"
+        android:textColor="@color/colorWhite"
+        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password" />
 
-        <TextView
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="@string/signin_button"
-            android:textColor="@color/colorDarkLightGrey" />
+    <TextView
+        android:layout_width="189dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="89dp"
+        android:gravity="center"
+        android:text="@string/guest_login"
+        android:textColor="@color/colorDarkLightGrey"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
-    </LinearLayout>
+    <TextView
+        android:id="@+id/btn_signin"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="@string/signin_button"
+        android:textColor="@color/colorWhite"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
