--- a/app/src/main/res/layout/backspace_toolbar.xml
+++ b/app/src/main/res/layout/backspace_toolbar.xml
@@ -2,15 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="85dp"
+    android:layout_height="58dp"
     android:background="@color/colorDarkGrey"
-    android:paddingStart="31dp">
+    android:paddingStart="30dp">
 
     <ImageView
         android:id="@+id/img_backspace_back_button"
         android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
         android:src="@drawable/back_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,8 +19,8 @@
         android:id="@+id/txt_backspace_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18dp"
         android:textColor="@color/colorWhite"
         android:textSize="25sp"
         app:layout_constraintStart_toEndOf="@+id/img_backspace_back_button"
