--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -18,8 +18,7 @@
 
     <fragment
         android:id="@+id/myPageFragment"
-        android:name="com.az.mypage.ui.views.MyPageFragment"
-        app:moduleName="mypage">
+        android:name="com.az.mypage.ui.views.MyPageFragment">
 
     </fragment>
 
