--- a/features/main/src/main/res/layout/item_humor_card.xml
+++ b/features/main/src/main/res/layout/item_humor_card.xml
@@ -21,11 +21,11 @@
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="26dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="16dp"
             android:text="@{humorItem.user}"
             android:textColor="@color/colorDarkGrey"
-            android:textSize="16dp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -38,22 +38,10 @@
             android:layout_marginStart="10dp"
             android:text="@{humorItem.date}"
             android:textColor="@color/colorDarkGrey"
-            android:textSize="11dp"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@id/user_name"
             app:layout_constraintStart_toEndOf="@id/user_name"
-            app:layout_constraintTop_toTopOf="@id/user_name"
             tools:text="2020.02.22" />
-
-        <View
-            android:id="@+id/humor_card_divider"
-            android:layout_width="0dp"
-            android:layout_height="0.4dp"
-            android:layout_marginHorizontal="25dp"
-            android:layout_marginTop="22dp"
-            android:background="@color/colorGreyGreyGrey"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/user_name" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -63,70 +51,70 @@
             android:gravity="center"
             android:text="@{humorItem.content}"
             android:textColor="@color/colorMiddleGrey"
-            android:textSize="43dp"
+            android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/comment_count"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/humor_card_divider"
+            app:layout_constraintTop_toBottomOf="@id/date"
             tools:text="소나무가\n삐지면?" />
 
         <ImageView
             android:id="@+id/heart"
-            android:layout_width="25dp"
-            android:layout_height="23dp"
-            android:layout_marginStart="22dp"
-            android:layout_marginBottom="26dp"
+            android:layout_width="18dp"
+            android:layout_height="17dp"
+            android:layout_marginBottom="16dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_heart"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="@id/user_name" />
 
         <TextView
             android:id="@+id/heart_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="2dp"
             android:text="@{@string/count(humorItem.heart)}"
             android:textColor="@color/colorDarkGrey"
-            android:textSize="11dp"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/heart"
             app:layout_constraintStart_toEndOf="@id/heart"
-            app:layout_constraintTop_toTopOf="@id/comment_count"
+            app:layout_constraintTop_toTopOf="@id/heart"
             tools:text="48개" />
 
         <ImageView
             android:id="@+id/comment"
-            android:layout_width="20dp"
-            android:layout_height="22dp"
-            android:layout_marginStart="21dp"
-            android:layout_marginBottom="24dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginStart="12dp"
             android:src="@drawable/ic_comment"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/heart"
             app:layout_constraintStart_toEndOf="@id/heart_count" />
 
         <TextView
             android:id="@+id/comment_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="3dp"
             android:text="@{@string/count(humorItem.comment)}"
             android:textColor="@color/colorDarkGrey"
-            android:textSize="11dp"
-            app:layout_constraintBottom_toBottomOf="@id/comment"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/heart_count"
             app:layout_constraintStart_toEndOf="@id/comment"
-            app:layout_constraintTop_toTopOf="@id/comment"
+            app:layout_constraintTop_toTopOf="@id/heart_count"
             tools:text="10개" />
 
         <ImageButton
             android:layout_width="44dp"
             android:layout_height="44dp"
-            android:layout_marginEnd="26dp"
-            android:layout_marginBottom="26dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/bg_humor_card_more_button"
             android:elevation="4dp"
             android:src="@drawable/ic_humor_more_arrow"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/user_name"
             app:pressedTranslationZ="8dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
