--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -13,222 +12,12 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorDarkGrey">
 
-        <com.az.main.StickyScrollView
-            android:id="@+id/sticky_scroll_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorDarkGrey">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="25dp">
-
-                    <androidx.constraintlayout.widget.Guideline
-                        android:id="@+id/user_grade_guide"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        app:layout_constraintGuide_percent="0.5" />
-
-                    <TextView
-                        android:id="@+id/user_grade"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="28dp"
-                        android:gravity="center"
-                        android:text="@{vm.userGrade}"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="45dp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@id/user_grade_guide"
-                        app:layout_constraintStart_toStartOf="parent"
-                        tools:text="유머쪼랩ㅋ" />
-
-                    <TextView
-                        android:id="@+id/user_grade_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="@{vm.userGradeText}"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="45dp"
-                        app:layout_constraintStart_toStartOf="@id/user_grade"
-                        app:layout_constraintTop_toBottomOf="@id/user_grade"
-                        tools:text="분발하자^^" />
-
-                    <ImageView
-                        android:layout_width="91dp"
-                        android:layout_height="138dp"
-                        android:src="@drawable/ic_sinip_main"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="37dp"
-                    android:layout_marginBottom="50dp">
-
-                    <TextView
-                        android:id="@+id/post_number_text"
-                        android:layout_width="35dp"
-                        android:layout_height="15dp"
-                        android:layout_marginStart="30dp"
-                        android:background="@drawable/bg_humor_grade_progress_button"
-                        android:gravity="center"
-                        android:text="게시글"
-                        android:textColor="@color/colorPurple"
-                        android:textSize="10dp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@id/post_number"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/post_number" />
-
-                    <TextView
-                        android:id="@+id/post_number"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:text="@{@string/count(vm.postCount)}"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="20dp"
-                        android:textStyle="bold"
-                        app:layout_constraintStart_toEndOf="@id/post_number_text"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:text="14개" />
-
-                    <TextView
-                        android:id="@+id/comment_number_text"
-                        android:layout_width="29dp"
-                        android:layout_height="15dp"
-                        android:layout_marginStart="12dp"
-                        android:background="@drawable/bg_humor_grade_progress_button"
-                        android:gravity="center"
-                        android:text="댓글"
-                        android:textColor="@color/colorPurple"
-                        android:textSize="10dp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@id/post_number_text"
-                        app:layout_constraintStart_toEndOf="@id/post_number"
-                        app:layout_constraintTop_toTopOf="@id/post_number_text" />
-
-                    <TextView
-                        android:id="@+id/comment_number"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:text="@{@string/count(vm.commentCount)}"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="20dp"
-                        android:textStyle="bold"
-                        app:layout_constraintStart_toEndOf="@id/comment_number_text"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:text="4개" />
-
-                    <View
-                        android:layout_width="0.8dp"
-                        android:layout_height="11.5dp"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginEnd="12dp"
-                        android:background="@color/colorWhite"
-                        app:layout_constraintBottom_toBottomOf="@id/humor_count_text"
-                        app:layout_constraintEnd_toStartOf="@id/humor_count_text"
-                        app:layout_constraintStart_toEndOf="@id/comment_number"
-                        app:layout_constraintTop_toTopOf="@id/humor_count_text" />
-
-
-                    <TextView
-                        android:id="@+id/humor_count_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
-                        android:text="@string/humor_count_text"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="15dp"
-                        app:layout_constraintBottom_toBottomOf="@id/comment_number"
-                        app:layout_constraintStart_toEndOf="@id/comment_number"
-                        app:layout_constraintTop_toTopOf="@id/comment_number" />
-
-                    <ProgressBar
-                        style="@style/HumorGradeProgressbar"
-                        android:layout_width="0dp"
-                        android:layout_height="9dp"
-                        android:layout_marginTop="11dp"
-                        android:progress="@{vm.humorGradeProgress}"
-                        android:progressDrawable="@drawable/humor_grade_progressbar"
-                        app:layout_constraintEnd_toEndOf="@id/humor_count_text"
-                        app:layout_constraintStart_toStartOf="@id/post_number_text"
-                        app:layout_constraintTop_toBottomOf="@id/post_number_text"
-                        tools:progress="70" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/humor_card_header"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_humor_card_title">
-
-                    <View
-                        android:layout_width="44dp"
-                        android:layout_height="6dp"
-                        android:layout_marginTop="15dp"
-                        android:background="@drawable/bg_humor_card_bar"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/humor_card_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:layout_marginTop="54dp"
-                        android:text="@string/humors_list_title"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="18dp"
-                        android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <CheckBox
-                        android:layout_width="110dp"
-                        android:layout_height="44dp"
-                        android:layout_marginTop="39dp"
-                        android:layout_marginEnd="30dp"
-                        android:background="@drawable/btn_hall_of_fame"
-                        android:button="@null"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/humor_card_rv"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="28dp"
-                        android:background="@color/colorGrey"
-                        android:nestedScrollingEnabled="@{vm.isRecyclerViewScrollable()}"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/humor_card_title"
-                        bind:setItems="@{vm.humors}"
-                        tools:listitem="@layout/item_humor_card" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </LinearLayout>
-        </com.az.main.StickyScrollView>
+        <include
+            layout="@layout/bottom_sheet_main"
+            bind:humors="@{vm.humors}" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="56dp"
